fix vertical align heading next to logo in header section

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -37,8 +37,13 @@ h4 {
     .container-logo {
         left: 40px;
         position: absolute;
+        height: 100%;
+        display: table;
 
         .logo {
+            display: table-cell;
+            vertical-align: middle;
+
             .image {
                 width: 70px;
                 height: 70px;
@@ -46,7 +51,10 @@ h4 {
             }
 
             .text {
-                padding: 19px 0 0 83px;
+                height: 70px;
+                vertical-align: middle;
+                display: table-cell;
+                padding-left: 14px;
 
                 .title {
                     font-size: 24px;
